apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

mainClassName = 'main.JepTester'
applicationDefaultJvmArgs = ["-XX:+ShowCodeDetailsInExceptionMessages"]

repositories {
    jcenter()
}
